--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -17,7 +17,7 @@ env:
 
 jobs:
   mrb-docker:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     outputs:
       domain: ${{ env.MRBEAM_PLUGIN_DOMAIN_NAME }}
     steps:
@@ -42,7 +42,7 @@ jobs:
           path: /tmp/image.tar
 
   ui-chrome-tests:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     permissions: write-all
     container:
       image: cypress/browsers:node16.17.0-chrome106
@@ -99,7 +99,7 @@ jobs:
           path: cypress/results
 
   xray-import:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: ui-chrome-tests
     if: always()
     steps:
