SW-2493-fixing-consistency-to-deployment-between-github-actions-and-bitbucket
* Added .jira/config.yml
* Modified the deployment-on-push.yml to include push to stable and deploy to staging
* Modified Envirnmnet names to start with upper case letter

--- a/.github/workflows/deployment-on-push.yml
+++ b/.github/workflows/deployment-on-push.yml
@@ -1,9 +1,9 @@
 # Deployment workflow to be used for Jira reporting
-name: Deploy alpha to Development
+name: Deploy on push to Developmnet or Staging
 
 on:
   push:
-    branches: ["alpha"]
+    branches: ["alpha", "stable"]
 
   workflow_dispatch:
 
@@ -14,20 +14,36 @@ permissions:
   id-token: write
 
 jobs:
-  deploy-dev:
-    name: Deploy to Dev environment
+  deploy:
+    name: Deploy on push
     # IMPORTANT: the workflow must have write access to deployments, otherwise the action will fail.
     permissions:
       deployments: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
+      - name: Check branch name
+        id: check-branch-name
+        run: |
+          if [ ${{ github.ref_name }} == "alpha" ]; then
+            echo 'DEPLOY_ENVIRONMENT=Development' >> $GITHUB_OUTPUT
+            echo " Deploying to Development environment"
+          elif [ ${{ github.ref_name }} == "stable" ]; then
+            echo 'DEPLOY_ENVIRONMENT=Staging' >> $GITHUB_OUTPUT
+            echo " Deploying to Staging environment"
+          else
+            echo 'DEPLOY_ENVIRONMENT=none' >> $GITHUB_OUTPUT
+            echo " Branch name: ${{ github.ref_name }} not supported, Exiting"
+            exit 1
+          fi
+
       - uses: chrnorm/deployment-action@v2
         name: Create GitHub deployment
-        id: deployment-dev
+        id: deployment
         with:
           token: '${{ github.token }}'
-          environment: development
+          environment: ${{steps.check-branch-name.outputs.DEPLOY_ENVIRONMENT}}
 
       - name: Update deployment status (success)
         if: ${{ success() }}
@@ -35,7 +51,7 @@ jobs:
         with:
           token: '${{ github.token }}'
           state: 'success'
-          deployment-id: ${{ steps.deployment-dev.outputs.deployment_id }}
+          deployment-id: ${{ steps.deployment.outputs.deployment_id }}
 
       - name: Update deployment status (failure)
         if: ${{ failure() }}
@@ -43,7 +59,7 @@ jobs:
         with:
           token: '${{ github.token }}'
           state: 'failure'
-          deployment-id: ${{ steps.deployment-dev.outputs.deployment_id }}
+          deployment-id: ${{ steps.deployment.outputs.deployment_id }}
 
       - name: Update deployment status (cancelled)
         if: ${{ cancelled() }}
@@ -51,4 +67,4 @@ jobs:
         with:
           token: '${{ github.token }}'
           state: 'cancelled'
-          deployment-id: ${{ steps.deployment-dev.outputs.deployment_id }}
+          deployment-id: ${{ steps.deployment.outputs.deployment_id }}
