-add shopify link to profiles and fix profile id 1

--- a/octoprint_mrbeam/profiles/airfilter_system/airfilter_system_id_2.yaml
+++ b/octoprint_mrbeam/profiles/airfilter_system/airfilter_system_id_2.yaml
@@ -1,5 +1,7 @@
 #airfilter 2 system
 prefilter:
   - lifespan: 40
+    shopify_link: 'https://store.mr-beam.org/products/10er-pack-vorfilter-fur-mr-beam-air-filter-system?utm_source=beamos&utm_medium=beamos&utm_campaign=maintenance_page'
 carbon_filter:
   - lifespan: 280
+    shopify_link: 'https://store.mr-beam.org/products/activated-carbon-filter-for-the-mr-beam-air-filter-system-incl-5-prefilter?utm_source=beamos&utm_medium=beamos&utm_campaign=maintenance_page'
