--- a/octoprint_mrbeam/profiles/airfilter_system/airfilter_system_id_1.yaml
+++ b/octoprint_mrbeam/profiles/airfilter_system/airfilter_system_id_1.yaml
@@ -1,1 +1,7 @@
 #No fan or airfilter 1 system
+prefilter:
+  - lifespan: 40
+    shopify_link: 'https://store.mr-beam.org/products/10er-pack-vorfilter-fur-mr-beam-air-filter-system?utm_source=beamos&utm_medium=beamos&utm_campaign=maintenance_page'
+carbonfilter:
+  - lifespan: 280
+    shopify_link: 'https://store.mr-beam.org/products/activated-carbon-filter-for-the-mr-beam-air-filter-system-incl-5-prefilter?utm_source=beamos&utm_medium=beamos&utm_campaign=maintenance_page'
