- get lifespan and shopify links for all filterstages of the given filter - get lifespan and shopify links in frontend - added more testing - fix broken shopify links

--- a/octoprint_mrbeam/profiles/airfilter_system/airfilter_system_id_4.yaml
+++ b/octoprint_mrbeam/profiles/airfilter_system/airfilter_system_id_4.yaml
@@ -1,7 +1,9 @@
 #airfilter 2 system
+prefilter_stages: 1
+carbonfilter_stages: 1
 prefilter:
   - lifespan: 40
-    shopify_link: 'Link to Shopify'#TODO
+    shopify_link: 'products/vorfilter-mrbeam?utm_source=beamos&utm_medium=beamos&utm_campaign=maintenance_page'
 carbonfilter:
   - lifespan: 280
-    shopify_link: 'Link to Shopify'#TODO
+    shopify_link: 'products/aktivkohlefilter-inklusive-zehn-vorfilter?utm_source=beamos&utm_medium=beamos&utm_campaign=maintenance_page'
