SW-2300 detect air filter 3 in mr beam plugin (#1651)
- detect air filter in Mr Beam Plugin
- switch profile of the air filter
- use profiles for maintenance parameters
- use profiles for maintenance page
- fix shopify links

--- a/octoprint_mrbeam/profiles/airfilter_system/airfilter_system_id_8.yaml
+++ b/octoprint_mrbeam/profiles/airfilter_system/airfilter_system_id_8.yaml
@@ -1,6 +1,11 @@
 #airfilter 3 system
+prefilter_stages: 2
+carbonfilter_stages: 1
 prefilter:
-  - lifespan: 40 #TODO
-  - lifespan: 40 #TODO
-carbon_filter:
-  - lifespan: 280 #TODO
+  - lifespan: 80 # TODO replace with correct value SW-2320
+    shopify_link: 'products/vorfilter-mrbeam?utm_source=beamos&utm_medium=beamos&utm_campaign=maintenance_page' # TODO replace with correct value SW-2320
+  - lifespan: 100 # TODO replace with correct value SW-2320
+    shopify_link: 'products/vorfilter-mrbeam?utm_source=beamos&utm_medium=beamos&utm_campaign=maintenance_page' # TODO replace with correct value SW-2320
+carbonfilter:
+  - lifespan: 400 # TODO replace with correct value SW-2320
+    shopify_link: 'products/aktivkohlefilter-inklusive-zehn-vorfilter?utm_source=beamos&utm_medium=beamos&utm_campaign=maintenance_page' # TODO replace with correct value SW-2320
