--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -98,6 +98,13 @@ jobs:
           name: report_${{ matrix.containers }}
           path: cypress/results
 
+      - name: Upload Cypress screenshots
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: screenshots_${{ matrix.containers }}
+          path: cypress/screenshots
+
   xray-import:
     runs-on: ubuntu-latest
     needs: ui-chrome-tests
