--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -70,6 +70,7 @@ jobs:
           apt-get install docker.io -y
           docker load --input /tmp/image.tar
           docker run --name mrbeam-plugin -d -p5002:5000 mrbeam_plugin
+          docker logs -f mrbeam-plugin
           sleep(20)
       - env:
           CYPRESS_TEST_USER_EMAIL: ${{ secrets.CYPRESS_TEST_USER_EMAIL }}
