--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -70,8 +70,8 @@ jobs:
           apt-get install docker.io -y
           docker load --input /tmp/image.tar
           docker run --name mrbeam-plugin -d -p5002:5000 mrbeam_plugin
-          docker logs -f mrbeam-plugin
           sleep(20)
+          docker logs mrbeam-plugin
       - env:
           CYPRESS_TEST_USER_EMAIL: ${{ secrets.CYPRESS_TEST_USER_EMAIL }}
           CYPRESS_TEST_USER_PASSWORD: ${{ secrets.CYPRESS_TEST_USER_PASSWORD }}
