--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -55,7 +55,7 @@ jobs:
       fail-fast: false
       matrix:
         # run copies of the current job in parallel
-        containers: [ 0, 1, 2, 3, 4 ]
+        containers: [ 0 ]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -87,7 +87,7 @@ jobs:
           config-file: cypress.config.js
           command: yarn ts-node cypress/scripts/cypress-ci-run.ts
         env:
-          TOTAL_RUNNERS: 5
+          TOTAL_RUNNERS: 1
           THIS_RUNNER: ${{ matrix.containers }}
           # Recommended: pass the GitHub token lets this action correctly
           # determine the unique run id necessary to re-run the checks
