SW-3054 mvp fire detection (#1730)
* add high temperature warning
* add high temperature handling in analytics, printer, leds, compressor and exhaust
* play sound on message show
* ignore led events on high_temperature_warning except shutdown
* bumped analytics version
* only play sound if it was not played in the last 5 minutes
* add translation

---------

Co-authored-by: Ahmed Salem <85931758+ahmed-mrbeam@users.noreply.github.com>

--- a/octoprint_mrbeam/profiles/laserhead/laserhead_id_0.yaml
+++ b/octoprint_mrbeam/profiles/laserhead/laserhead_id_0.yaml
@@ -1,4 +1,5 @@
 max_temperature: 55.0
+high_temperature_offset: 2.0
 max_dust_factor: 2.0
 max_correction_factor: 1.15
 max_intensity_including_correction: 1500
