SW-2088 all notifications error messages are missing (#32)
* SW-2088 fix pnotify missing and adapt to vanilla octoprint index
* SW-2088 fix pnotifys and menu
* fix opencv error that raises due to new opencv version
* fix material settings tooltip
* fix failing guided tour
* change dockerfile for python3
* add wheel to requirements as pip install -e . was not possible without
* fixed deployment workflow

--- a/.github/workflows/deployment-development.yml
+++ b/.github/workflows/deployment-development.yml
@@ -19,6 +19,7 @@ jobs:
     # IMPORTANT: the workflow must have write access to deployments, otherwise the action will fail.
     permissions:
       deployments: write
+      contents: read
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
